--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
 	"dependencies": {
 		"@mdi/js": "^7.4.47",
 		"@tailwindcss/vite": "^4.1.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-vue-next": "^0.487.0",
+		"reka-ui": "^2.2.0",
+		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.3",
-		"tw-animate-css": "^1.2.4",
+		"tw-animate-css": "^1.2.5",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vue": "^3.5.13",
 		"vue-i18n": "^10.0.6",
@@ -22,9 +27,10 @@
 	},
 	"devDependencies": {
 		"@duplojs/eslint": "^0.4.0",
+		"@types/node": "^22.14.0",
 		"@vitejs/plugin-vue": "^5.2.1",
-    "eslint": "9.23.0",
 		"@vue/tsconfig": "^0.7.0",
+		"eslint": "9.23.0",
 		"eslint-plugin-vue": "^10.0.0",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.26.1",
