--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,6 +8,7 @@
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true,
+		"baseUrl": ".",
 		"paths": {
 			"@/*": [
 				"./src/*"
@@ -15,6 +16,7 @@
 		}
 	},
 	"include": [
+		"./vite.config.ts",
 		"src/**/*.ts",
 		"src/**/*.tsx",
 		"src/**/*.vue",
