--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
 	"dependencies": {
 		"@mdi/js": "^7.4.47",
 		"@tailwindcss/vite": "^4.1.3",
+		"@tanstack/vue-table": "^8.21.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"dotenv": "^16.4.7",
-		"dotenv-expand": "^12.0.1",
 		"lucide-vue-next": "^0.487.0",
 		"reka-ui": "^2.2.0",
 		"tailwind-merge": "^3.2.0",
