add duplo + refacto front

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,8 @@
 	"html.format.enable": false,
 	"json.format.enable": false,
 	"eslint.workingDirectories": [
-		"./src",
+		"./duplo",
+		"./vue",
 	],
 	"typescript.tsdk": "node_modules/typescript/lib"
 }
