--- a/package.json
+++ b/package.json
@@ -1,43 +1,18 @@
 {
-	"name": "portfolio-airtable",
-	"version": "0.0.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"test:lint": "eslint",
-		"test:types": "vue-tsc",
-		"build": "vue-tsc && vite build",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@mdi/js": "^7.4.47",
-		"@tailwindcss/vite": "^4.1.3",
-		"@tanstack/vue-table": "^8.21.2",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"lucide-vue-next": "^0.487.0",
-		"reka-ui": "^2.2.0",
-		"tailwind-merge": "^3.2.0",
-		"tailwindcss": "^4.1.3",
-		"tw-animate-css": "^1.2.5",
-		"vite-tsconfig-paths": "^5.1.4",
-		"vue": "^3.5.13",
-		"vue-i18n": "^10.0.6",
-		"vue-router": "^4.5.0",
-		"zod": "^3.24.2"
-	},
-	"devDependencies": {
-		"@duplojs/eslint": "^0.4.0",
-		"@types/node": "^22.14.0",
-		"@vitejs/plugin-vue": "^5.2.1",
-		"@vue/tsconfig": "^0.7.0",
-		"eslint": "9.23.0",
-		"eslint-plugin-vue": "^10.0.0",
-		"typescript": "~5.7.2",
-		"typescript-eslint": "^8.26.1",
-		"vite": "^6.2.0",
-		"vue-eslint-parser": "^10.1.1",
-		"vue-tsc": "^2.2.4"
-	}
+  "name": "portfolio-airtable",
+  "version": "1.0.0",
+  "type": "module",
+  "private": true,
+  "workspaces": [
+    "./vue",
+    "./duplo"
+  ],
+  "scripts": {},
+  "author": {
+    "name": "Vitaalx",
+    "email": "liamdu92@gmail.com",
+    "url": "https://github.com/Vitaalx"
+  },
+  "description": "Ceci est un projet de portfolio pour la filière IW qui utilise Airtable pour stocker les données.",
+  "license": "ISC"
 }
