--- a/duplo/package.json
+++ b/duplo/package.json
@@ -4,18 +4,32 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "tsx --watch src/main.ts"
+    "dev": "tsx --watch src/main.ts",
+    "duplo:generate": "duplojs-types-codegen --import @duplojs/node/globals --include src/routes/index.ts --output ../vue/src/lib/api-client/types/duplojsTypesCodegen.d.ts",
+    "postinstall": "npm run duplo:generate"
   },
   "license": "ISC",
   "description": "Ceci est le back du projet portfolio afin de sécuriser la partie administrative de l'application du portfolio.",
   "dependencies": {
-    "@duplojs/core": "^1.0.3",
-    "@duplojs/node": "^1.0.1",
+    "@duplojs/core": "1.0.3",
+    "@duplojs/http-client": "1.2.2",
+    "@duplojs/node": "1.0.1",
+    "bcrypt": "5.1.1",
     "dotenv": "16.4.5",
-    "dotenv-expand": "12.0.1"
+    "dotenv-expand": "12.0.1",
+    "jsonwebtoken": "9.0.2",
+    "ts-pattern": "5.7.0"
   },
   "devDependencies": {
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.3"
+    "@duplojs/eslint": "0.4.0",
+    "@duplojs/types-codegen": "1.0.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "9.0.9",
+    "@types/node": "22.13.10",
+    "eslint": "9.23.0",
+    "jiti": "2.4.2",
+    "tsx": "4.19.3",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.26.1"
   }
 }
