--- a/vue/tsconfig.node.json
+++ b/vue/tsconfig.node.json
@@ -21,7 +21,8 @@
     "noUncheckedSideEffectImports": true,
 	
 	"baseUrl": "./",
-	"paths": {}
+	"paths": {
+	}
   },
-  "include": ["vue/vite.config.ts", "vue/eslint.config.ts"]
+  "include": ["vite.config.ts", "eslint.config.js"]
 }
