--- a/duplo/tsconfig.json
+++ b/duplo/tsconfig.json
@@ -9,6 +9,7 @@
         "noEmit": true,
         "esModuleInterop": true,
         "strict": true,
+		"skipLibCheck": true,
     },
-    "include": ["src/**/*.ts"]
+    "include": ["src/**/*.ts", "eslint.config.ts"]
 }
