--- a/vue/package.json
+++ b/vue/package.json
@@ -11,33 +11,38 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@mdi/js": "^7.4.47",
-		"@tailwindcss/vite": "^4.1.3",
-		"@tanstack/vue-table": "^8.21.2",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"lucide-vue-next": "^0.487.0",
+		"@duplojs/http-client": "1.2.2",
+		"@mdi/js": "7.4.47",
+		"@tailwindcss/vite": "4.1.3",
+		"@tanstack/vue-table": "8.21.2",
+		"@vee-validate/zod": "^4.15.0",
+		"@vueuse/core": "^13.1.0",
+		"class-variance-authority": "0.7.1",
+		"clsx": "2.1.1",
+		"lucide-vue-next": "0.487.0",
 		"reka-ui": "^2.2.0",
-		"tailwind-merge": "^3.2.0",
-		"tailwindcss": "^4.1.3",
-		"tw-animate-css": "^1.2.5",
-		"vite-tsconfig-paths": "^5.1.4",
-		"vue": "^3.5.13",
-		"vue-i18n": "^10.0.6",
-		"vue-router": "^4.5.0",
+		"tailwind-merge": "3.2.0",
+		"tailwindcss": "4.1.3",
+		"tw-animate-css": "1.2.5",
+		"vee-validate": "^4.15.0",
+		"vite-tsconfig-paths": "5.1.4",
+		"vue": "3.5.13",
+		"vue-i18n": "10.0.6",
+		"vue-router": "4.5.0",
+		"vue-sonner": "1.3.2",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@duplojs/eslint": "^0.4.0",
-		"@types/node": "^22.14.0",
-		"@vitejs/plugin-vue": "^5.2.1",
-		"@vue/tsconfig": "^0.7.0",
+		"@duplojs/eslint": "0.4.0",
+		"@types/node": "22.14.0",
+		"@vitejs/plugin-vue": "5.2.1",
+		"@vue/tsconfig": "0.7.0",
 		"eslint": "9.23.0",
-		"eslint-plugin-vue": "^10.0.0",
-		"typescript": "~5.7.2",
-		"typescript-eslint": "^8.26.1",
-		"vite": "^6.2.0",
-		"vue-eslint-parser": "^10.1.1",
-		"vue-tsc": "^2.2.4"
+		"eslint-plugin-vue": "10.0.0",
+		"typescript": "5.7.2",
+		"typescript-eslint": "8.26.1",
+		"vite": "6.2.0",
+		"vue-eslint-parser": "10.1.1",
+		"vue-tsc": "2.2.4"
 	}
 }
