--- a/vue/tsconfig.app.json
+++ b/vue/tsconfig.app.json
@@ -2,24 +2,25 @@
 	"extends": "@vue/tsconfig/tsconfig.dom.json",
 	"compilerOptions": {
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+		
 		/* Linting */
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true,
-		"baseUrl": ".",
+
+		"noEmit": true,
+		
+		"baseUrl": "./",
 		"paths": {
-			"@/*": [
-				"./src/*"
-			],
+			"@/*": ["./src/*"],
 		}
 	},
 	"include": [
-		"./vite.config.ts",
-		"src/**/*.ts",
-		"src/**/*.tsx",
+		"src/**/*.ts", 
+		"src/**/*.tsx", 
 		"src/**/*.vue",
-		"*.d.ts"
-, "vue/vite-vue.d.ts"	]
+		"*.d.ts",
+	],
 }
