add admin panel

--- a/vue/package.json
+++ b/vue/package.json
@@ -33,16 +33,18 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@duplojs/eslint": "0.4.0",
+    "@duplojs/eslint": "0.4.0",
+    "eslint": "9.23.0",
+    "eslint-plugin-vue": "10.0.0",
+    "globals": "16.0.0",
+    "jiti": "2.4.2",
+    "typescript-eslint": "8.26.1",
+    "vue-eslint-parser": "10.1.1",
 		"@types/node": "22.14.0",
 		"@vitejs/plugin-vue": "5.2.1",
 		"@vue/tsconfig": "0.7.0",
-		"eslint": "9.23.0",
-		"eslint-plugin-vue": "10.0.0",
 		"typescript": "5.7.2",
-		"typescript-eslint": "8.26.1",
 		"vite": "6.2.0",
-		"vue-eslint-parser": "10.1.1",
 		"vue-tsc": "2.2.4"
 	}
 }
