--- a/vue/tsconfig.node.json
+++ b/vue/tsconfig.node.json
@@ -21,8 +21,7 @@
     "noUncheckedSideEffectImports": true,
 	
 	"baseUrl": "./",
-	"paths": {
-	}
+	"paths": {}
   },
-  "include": ["vite.config.ts", "eslint.config.js"]
+  "include": ["vite.config.ts", "eslint.config.ts"]
 }
