--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,39 @@
 {
-  "editor.tabSize": 4,
-  "editor.insertSpaces": false,
-  "editor.detectIndentation": false,
-  "files.autoSave": "off",
-  "[yaml]": {
-    "editor.tabSize": 2,
-    "editor.insertSpaces": true
-  },
-  "[json]": {
-    "editor.tabSize": 2,
-    "editor.insertSpaces": true
-  },
-  "editor.codeActionsOnSave": {
-    "source.fixAll": "never"
-  },
-  "editor.codeActions.triggerOnFocusChange": false,
-  "editor.formatOnSave": true,
-  "[prisma]": {
-    "editor.defaultFormatter": "Prisma.prisma"
-  },
-  "vue.codeActions.askNewComponentName": false,
-  "prettier.enable": false,
-  "javascript.format.enable": false,
-  "typescript.format.enable": false,
-  "html.format.enable": false,
-  "json.format.enable": false,
-//   "eslint.workingDirectories": [
-//     "./duplo",
-// 	"./vue"
-//   ],
-  "typescript.tsdk": "node_modules/typescript/lib"
-}
+	"editor.tabSize": 4,
+	"editor.insertSpaces": false,
+	"editor.detectIndentation": false,
+	"files.autoSave": "off",
+	"[yaml]": {
+	  "editor.tabSize": 2,
+	  "editor.insertSpaces": true
+	},
+	"[json]": {
+	  "editor.tabSize": 2,
+	  "editor.insertSpaces": true
+	},
+	"editor.codeActionsOnSave": {
+  		"source.fixAll.eslint": "explicit"
+	},
+	"editor.formatOnSave": true,
+	"[prisma]": {
+	  "editor.defaultFormatter": "Prisma.prisma"
+	},
+	"vue.codeActions.askNewComponentName": false,
+	"prettier.enable": false,
+	"javascript.format.enable": false,
+	"typescript.format.enable": false,
+	"html.format.enable": false,
+	"json.format.enable": false,
+	"eslint.workingDirectories": [
+	  "./duplo",
+	  "./vue"
+	],
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"githubPullRequests.experimental.chat": true,
+	"github.copilot.enable": {
+		"*": false,
+		"plaintext": false,
+		"markdown": false,
+		"scminput": false
+	},
+  }
