--- a/vue/.env
+++ b/vue/.env
@@ -1,2 +1,3 @@
 VITE_AIRTABLE_API_KEY=""
-VITE_AIRTABLE_BASE_URL="https://api.airtable.com/v0/appyoGEmlEg9bPFrV/"
+VITE_AIRTABLE_BASE_URL="https://api.airtable.com/v0/appyoGEmlEg9bPFrV"
+VITE_API_BASE_URL="http://localhost:1506"
