--- a/vue/tsconfig.app.json
+++ b/vue/tsconfig.app.json
@@ -2,25 +2,25 @@
 	"extends": "@vue/tsconfig/tsconfig.dom.json",
 	"compilerOptions": {
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-		
 		/* Linting */
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true,
-
-		"noEmit": true,
-		
-		"baseUrl": "./",
+		"skipLibCheck": true,
+		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./src/*"],
+			"@/*": [
+				"./src/*"
+			],
 		}
 	},
 	"include": [
-		"src/**/*.ts", 
-		"src/**/*.tsx", 
+		"./vite.config.ts",
+		"src/**/*.ts",
+		"src/**/*.tsx",
 		"src/**/*.vue",
-		"*.d.ts",
-	],
+		"*.d.ts"
+	]
 }
