add login admin + publish or unpublish projects admin page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,7 @@
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"githubPullRequests.experimental.chat": true,
 	"github.copilot.enable": {
-		"*": false,
+		"*": true,
 		"plaintext": false,
 		"markdown": false,
 		"scminput": false
