--- a/vue/package.json
+++ b/vue/package.json
@@ -17,6 +17,7 @@
 		"@tanstack/vue-table": "8.21.2",
 		"@vee-validate/zod": "^4.15.0",
 		"@vueuse/core": "^13.1.0",
+		"chart.js": "^4.4.9",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"lucide-vue-next": "0.487.0",
@@ -27,6 +28,7 @@
 		"vee-validate": "^4.15.0",
 		"vite-tsconfig-paths": "5.1.4",
 		"vue": "3.5.13",
+		"vue-chartjs": "^5.3.2",
 		"vue-i18n": "10.0.6",
 		"vue-router": "4.5.0",
 		"vue-sonner": "^1.3.2",
